# camera_aravis

./: .gitignore  CMakeLists.txt  camera_aravis_plugins.xml  install_aravis_lib.sh  package.xml
CMakeModules/: FindAravis.cmake
cfg/: CameraAravis.cfg  CameraAravisConfig.cfg
cmake/: FindAravis.cmake
include/camera_aravis/: camera_nodelet.h
launch/: nodelet.launch
src/: camera_node.cpp  camera_nodelet.cpp
test/: compile.sh  compile_g++.sh  regex_split.c
